# clark-browser

./: CHANGELOG.md  PATCHES.md  README.md  pyproject.toml
.github/workflows/: build.yml  (+3 more)
clarkbrowser/: __init__.py  __main__.py  _version.py  browser.py  config.py  download.py  hygiene.py  interaction.py
data/: gpu_pool.json
docs/: bot-detection-results.md
examples/: agent_browser.md  basic.py  bot_detection_promo.py  interaction_hygiene.py  stealth_check.py
patches/: 0001-navigator-webdriver-false.patch  0002-headless-window-chrome.patch  0003-navigator-plugins-pdf-five-tuple.patch  0005-navigator-languages-from-cli.patch  0006-navigator-platform-hwc-ua-from-cli.patch  0007-user-agent-client-hints-from-cli.patch  0008-device-memory-from-cli.patch  0009-navigator-max-touch-points-from-cli.patch  0010-notification-permission-prompt.patch  0011-screen-dimensions-from-cli.patch  0013-window-outer-and-dpr.patch  0016-webgl-vendor-renderer-from-cli.patch  0019-enable-ungoogled-stealth-features.patch  0026-audio-fingerprint-noise.patch  0027-analyser-node-noise.patch  0032-fingerprint-timezone-cli.patch  0036-storage-estimate-from-cli.patch  0037-incognito-static-quota.patch  0040-net-stealth-defaults.patch  0041-chrome-stealth-defaults.patch  0045-headless-user-agent.patch  0047-suppress-cdc-globals.patch  0048-permissions-prompt-default.patch  0049-webgpu-adapter-info-coherent.patch  0050-renderer-arg-whitelist-fingerprint.patch  0051-network-information-profile.patch
promo/: clark-browser-bot-check.json
specs/: 03-plugins.md  18-webgl-gpu-pool.md  22-canvas-noise.md  40-tls-fingerprint.md  A-navigator.md  B-screen.md  C-webgl.md  D-canvas-rects.md  E-audio.md  F-fonts.md  G-time-locale.md  H-storage.md  I-webrtc.md  J-tls-http.md  K-headless.md  L-webgpu.md
tests/: integration_smoke.py  linux_smoke.py  test_imports.py  tls_fingerprint.py  webrtc_proxy_smoke.py
(+9 files in other folders)
